--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -7,14 +7,20 @@
     "airbnb"
   ],
   "rules": {
-    "import/no-unresolved": 0,
     "linebreak-style": 0,
+    "arrow-body-style": 0,
+    "implicit-arrow-linebreak": 0,
+    "import/no-unresolved": 0,
+    "import/prefer-default-export": 0,
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
-    "arrow-body-style": 0,
-    "react/jsx-one-expression-per-line": 0,
-    "import/prefer-default-export": 0,
     "react/jsx-filename-extension": 0,
-    "implicit-arrow-linebreak": 0
+    "react/jsx-one-expression-per-line": 0,
+    "react/no-unused-state": 0,
+    "class-methods-use-this": 0,
+    "react/no-string-refs": 0,
+    "react/no-find-dom-node": 0,
+    "no-unused-vars": 0,
+    "react/forbid-prop-types": 0
   }
 }
