--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "history": "^4.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
