--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "cd client && npm run start",
     "server": "cd server && npm run start",
-    "client-lint": "cd client && npm run build",
+    "client-build": "cd client && npm run build",
     "start": "concurrently - kill-others \"npm run server\" \"npm run client\""
   },
   "author": "",
@@ -17,7 +17,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run client-lint"
+      "pre-commit": "npm run client-build"
     }
   }
 }
